@@ -1,3 +1,13 @@
+2008-10-01 17:05  cvs
+
+	* lib/LEOCHARRE/Dir.pm, t/00.t: Made some improvements to error
+	  handling.
+
+2008-09-15 19:03  cvs
+
+	* lib/LEOCHARRE/Dir.pm: changed lsd subs to use readdir() instead
+	  of testing for -d
+
 2008-09-08 19:47  cvs
 
 	* lib/LEOCHARRE/Dir.pm, t/00.t: fixed some warnings
